--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>switch2019.training</groupId>
-    <artifactId>training</artifactId>
+    <groupId>switch2020</groupId>
+    <artifactId>project</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>training</name>
+    <name>project</name>
 
 
     <properties>
@@ -21,14 +21,14 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.5.2</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.2</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -40,8 +40,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
 
                     <showWarnings>true</showWarnings>   <!-- Needs this -->
 
@@ -74,7 +74,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.6</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -93,7 +93,7 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.4.10</version>
+                <version>LATEST</version>
                 <dependencies>
                     <dependency> <!-- Only required because PITest does not work with JUnit5 without it -->
                         <groupId>org.pitest</groupId>
@@ -108,12 +108,12 @@
                         <param>lapr.project.utils.*</param>
                     </inScopeClasses>-->
                     <targetClasses>
-                        <param>switch2019.project.model.*</param>
-                        <param>switch2019.project.controllers.*</param>
+                        <param>switch2029.project.model.*</param>
+                        <param>switch2020.project.controllers.*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>switch2019.project.model</param>
-                        <param>switch2019.project.controllers</param>
+                        <param>switch2020.project.model</param>
+                        <param>switch2020.project.controllers</param>
                     </targetTests>
                     <outputFormats>
                         <outputFormat>XML</outputFormat>
