--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/Project_Default.xml
 
 # Generated files
 .idea/**/contentModel.xml
