pom.xml with services and utils

--- a/pom.xml
+++ b/pom.xml
@@ -110,10 +110,14 @@
                     <targetClasses>
                         <param>switch2020.project.model.*</param>
                         <param>switch2020.project.controllers.*</param>
+                        <param>switch2020.project.services.*</param>
+                        <param>switch2020.project.utils.*</param>
                     </targetClasses>
                     <targetTests>
                         <param>switch2020.project.model.*</param>
                         <param>switch2020.project.controllers.*</param>
+                        <param>switch2020.project.services.*</param>
+                        <param>switch2020.project.utils.*</param>
                     </targetTests>
                     <outputFormats>
                         <outputFormat>XML</outputFormat>
