--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
