--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/**/Project_Default.xml
+.idea/misc.xml
 
 # Generated files
 .idea/**/contentModel.xml
