--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 
             <!-- Required for running unit tests -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
