--- a/pom.xml
+++ b/pom.xml
@@ -102,12 +102,16 @@
                 <artifactId>pitest-maven</artifactId>
                 <version>1.6.2</version>
                 <dependencies>
-
-
                     <dependency> <!-- Only required because PITest does not work with JUnit5 without it -->
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-junit5-plugin</artifactId>
                         <version>0.12</version>
+                    </dependency>
+                    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+                    <dependency>
+                        <groupId>com.google.code.gson</groupId>
+                        <artifactId>gson</artifactId>
+                        <version>2.8.6</version>
                     </dependency>
                 </dependencies>
                 <configuration>
