--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
+<!--junit 5.7.0 necessario para o IntelliJ detectar os Asserts do Junit -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -75,10 +75,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
