--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <version>1.18.18</version>
         </dependency>
 
+        <dependency> <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+            <!-- <version>2.1.4.RELEASE</version> -->
+        </dependency>
+
     </dependencies>
 
     <build>
