--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb2;DB_CLOSE_ON_EXIT=FALSE
 spring.h2.console.path=/h2-console2
 #AccountTypes
-cash=switchtwentytwenty.project.datamodel.domainjpa.PersonJPA.class
+cash=switchtwentytwenty.project.domain.aggregates.account.CashAccount.class 
+credit=switchtwentytwenty.project.domain.aggregates.account.CreditCardAccount.class
+bank=switchtwentytwenty.project.domain.aggregates.account.BankAccount.class
+debit=switchtwentytwenty.project.domain.aggregates.account.DebitCardAccount.class
