add 100% coverage to accountFactory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ cash=switchtwentytwenty.project.domain.aggregates.account.CashAccount
 credit=switchtwentytwenty.project.domain.aggregates.account.CreditCardAccount
 bank=switchtwentytwenty.project.domain.aggregates.account.BankAccount
 savings=switchtwentytwenty.project.domain.aggregates.account.BankSavingsAccount
+baank=switchtwentytwenty.project.domain.aggregates.account.BaankAccount
