Add test for AccountAlreadyRegistredExcpetion and changes to pom.xml to exclude FFMSpringBootApplicationTest

--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,7 @@
                     </targetTests>
                     <excludedTestClasses>
                         <excludedTestClass>switchtwentytwenty.project.**.*ITDB</excludedTestClass>
+                        <excludedTestClass>switchtwentytwenty.project.**.FFMSpringBootApplicationTest</excludedTestClass>
                         <!--<param>switchtwentytwenty.project.**.*ITDB</param>-->
                     </excludedTestClasses>
                     <outputFormats>
