--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>project</name>
 
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -25,8 +24,6 @@
     </parent>
 
     <dependencies>
-
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -49,7 +46,6 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -66,18 +62,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -94,7 +87,6 @@
             <artifactId>spring-beans</artifactId>
             <version>5.3.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -114,11 +106,9 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
             <!-- <version>2.1.4.RELEASE</version> -->
         </dependency>
-
     </dependencies>
 
     <build>
-
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -159,9 +149,7 @@
                             <value>org.sonar.java.jacoco.JUnitListener</value>
                         </property>
                     </properties>
-
                 </configuration>
-
             </plugin>
             <!-- Required for generating coverage report -->
             <plugin>
@@ -199,7 +187,6 @@
                         <artifactId>gson</artifactId>
                         <version>2.8.6</version>
                     </dependency>
-
                 </dependencies>
                 <configuration>
                     <!--<timestampedReports>false</timestampedReports>-->
@@ -208,35 +195,30 @@
                         <param>lapr.project.utils.*</param>
                     </inScopeClasses>-->
                     <targetClasses>
-                        <param>switchtwentytwenty.project.datamodel.*</param>
+                        <param>switchtwentytwenty.project.*</param>
+                        <!--<param>switchtwentytwenty.project.datamodel.*</param>
                         <param>switchtwentytwenty.project.domain.*</param>
                         <param>switchtwentytwenty.project.dto.*</param>
                         <param>switchtwentytwenty.project.exceptions.*</param>
                         <param>switchtwentytwenty.project.interfaceadapters.*</param>
                         <param>switchtwentytwenty.project.usecaseservices.*</param>
-                        <param>switchtwentytwenty.project.util.*</param>
+                        <param>switchtwentytwenty.project.util.*</param>-->
                     </targetClasses>
-
-                    <!--<excludedClasses>
-                        <excludedClass>switchtwentytwenty.project.FFMSpringBootApplication</excludedClass>
-                    </excludedClasses> -->
-
                     <targetTests>
-                        <param>switchtwentytwenty.project.datamodel.*</param>
+                        <param>switchtwentytwenty.project.*</param>
+                        <!--<param>switchtwentytwenty.project.datamodel.*</param>
                         <param>switchtwentytwenty.project.domain.*</param>
                         <param>switchtwentytwenty.project.dto.*</param>
                         <param>switchtwentytwenty.project.exceptions.*</param>
                         <param>switchtwentytwenty.project.interfaceadapters.*</param>
                         <param>switchtwentytwenty.project.usecaseservices.*</param>
-                        <param>switchtwentytwenty.project.util.*</param>
+                        <param>switchtwentytwenty.project.util.*</param>-->
                     </targetTests>
-
                     <excludedTestClasses>
+                        <!--<excludedTestClass>switchtwentytwenty.**.*ITDB</excludedTestClass>-->
                         <excludedTestClass>switchtwentytwenty.project.**.*ITDB</excludedTestClass>
                         <excludedTestClass>switchtwentytwenty.project.*ITDB</excludedTestClass>
-                        <!--<param>switchtwentytwenty.project.**.*ITDB</param>-->
                     </excludedTestClasses>
-
                     <outputFormats>
                         <outputFormat>XML</outputFormat>
                         <outputFormat>HTML</outputFormat>
@@ -258,12 +240,10 @@
                     </archive>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -275,7 +255,6 @@
                     <useDefaultDelimiters>false</useDefaultDelimiters>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 </project>
