--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>project</name>
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -24,6 +25,8 @@
     </parent>
 
     <dependencies>
+
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -46,6 +49,7 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -62,15 +66,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -87,6 +94,7 @@
             <artifactId>spring-beans</artifactId>
             <version>5.3.5</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -106,9 +114,11 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
             <!-- <version>2.1.4.RELEASE</version> -->
         </dependency>
+
     </dependencies>
 
     <build>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -149,7 +159,9 @@
                             <value>org.sonar.java.jacoco.JUnitListener</value>
                         </property>
                     </properties>
+
                 </configuration>
+
             </plugin>
             <!-- Required for generating coverage report -->
             <plugin>
@@ -187,6 +199,7 @@
                         <artifactId>gson</artifactId>
                         <version>2.8.6</version>
                     </dependency>
+
                 </dependencies>
                 <configuration>
                     <!--<timestampedReports>false</timestampedReports>-->
@@ -195,48 +208,33 @@
                         <param>lapr.project.utils.*</param>
                     </inScopeClasses>-->
                     <targetClasses>
-                        <param>switchtwentytwenty.project.*</param>
-<<<<<<< HEAD
-                        <!--<param>switchtwentytwenty.project.datamodel.*</param>
+                        <!--  <param>switchtwentytwenty.project.*</param>-->
+                        <param>switchtwentytwenty.project.datamodel.*</param>
                         <param>switchtwentytwenty.project.domain.*</param>
                         <param>switchtwentytwenty.project.dto.*</param>
                         <param>switchtwentytwenty.project.exceptions.*</param>
                         <param>switchtwentytwenty.project.interfaceadapters.*</param>
                         <param>switchtwentytwenty.project.usecaseservices.*</param>
-                        <param>switchtwentytwenty.project.util.*</param>-->
+                        <param>switchtwentytwenty.project.util.*</param>
                     </targetClasses>
-=======
-                    <!--<param>switchtwentytwenty.project.datamodel.*</param>
-                   <param>switchtwentytwenty.project.domain.*</param>
-                   <param>switchtwentytwenty.project.dto.*</param>
-                   <param>switchtwentytwenty.project.exceptions.*</param>
-                   <param>switchtwentytwenty.project.interfaceadapters.*</param>
-                   <param>switchtwentytwenty.project.usecaseservices.*</param>
-                   <param>switchtwentytwenty.project.util.*</param>-->
-               </targetClasses>
 
->>>>>>> origin/master
                     <targetTests>
-                        <param>switchtwentytwenty.project.*</param>
-                        <!--<param>switchtwentytwenty.project.datamodel.*</param>
+                        <!--<param>switchtwentytwenty.project.*</param>-->
+                        <param>switchtwentytwenty.project.datamodel.*</param>
                         <param>switchtwentytwenty.project.domain.*</param>
                         <param>switchtwentytwenty.project.dto.*</param>
                         <param>switchtwentytwenty.project.exceptions.*</param>
                         <param>switchtwentytwenty.project.interfaceadapters.*</param>
                         <param>switchtwentytwenty.project.usecaseservices.*</param>
-                        <param>switchtwentytwenty.project.util.*</param>-->
+                        <param>switchtwentytwenty.project.util.*</param>
                     </targetTests>
+
                     <excludedTestClasses>
-<<<<<<< HEAD
-                        <!--<excludedTestClass>switchtwentytwenty.**.*ITDB</excludedTestClass>-->
-                        <excludedTestClass>switchtwentytwenty.project.**.*ITDB</excludedTestClass>
-                        <excludedTestClass>switchtwentytwenty.project.*ITDB</excludedTestClass>
-=======
                         <excludedTestClass>switchtwentytwenty.**.*ITDB</excludedTestClass>
                         <!--<excludedTestClass>switchtwentytwenty.project.**.*ITDB</excludedTestClass>
                         <excludedTestClass>switchtwentytwenty.project.*ITDB</excludedTestClass>-->
->>>>>>> origin/master
                     </excludedTestClasses>
+
                     <outputFormats>
                         <outputFormat>XML</outputFormat>
                         <outputFormat>HTML</outputFormat>
@@ -258,10 +256,12 @@
                     </archive>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -273,6 +273,7 @@
                     <useDefaultDelimiters>false</useDefaultDelimiters>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
