--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>switch2020</groupId>
     <artifactId>project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- Add-on for war file creation -->
+    <packaging>war</packaging>
     <name>project</name>
 
 
@@ -143,6 +145,17 @@
 
                     <encoding>${project.build.sourceEncoding}</encoding>
 
+                </configuration>
+            </plugin>
+
+            <!-- Plugin for war file creation -->
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <warSourceDirectory>WebContent</warSourceDirectory>
+                    <webappDirectory>/target</webappDirectory>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
 
