--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <!-- Add-on for war file creation -->
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
     <name>project</name>
 
 
@@ -149,7 +149,7 @@
             </plugin>
 
             <!-- Plugin for war file creation -->
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
@@ -158,7 +158,7 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-
+-->
             <!-- Required for running unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
