Add @Transactional to CreateFamilyService and change in application-prod.properties to update db

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,9 +13,8 @@ spring.datasource.username=g3
 spring.datasource.password=apestogetherstrong
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 ##############
 
 #AccountTypes
