--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.20</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 
 
     </dependencies>
