--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0"
   }
 }
